# gpui-bar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: AppIcon.icns
examples/: spike_js.rs  test_config.rs
scripts/: build_dmg.sh  gen_icon.py  install-types.sh
src/: bar.rs  config.rs  dashboard.rs  hotkey.rs  js_runtime.rs  main.rs  panel.rs
types/: gpui-dashboard.d.ts  tsconfig.json
